# rootstock

./: CLAUDE.md  LICENSE.md  README.md  design-doc-v2.md  design-doc-v3.md  design-doc-v4.md  design-doc-v5.md  modal_app.py  pyproject.toml
.claude/: settings.local.json
benchmarks/: __init__.py  sanity_check.py  systems.py
rootstock/: __init__.py  calculator.py  cli.py  clusters.py  environment.py  protocol.py  server.py  worker.py
rootstock-ipc-benchmark/: .gitignore  CONTEXT.md  README.md  modal_app.py  pyproject.toml
rootstock-ipc-benchmark/benchmarks/: direct.py  ipc.py  md_comparison.py  run_local.py
rootstock-ipc-benchmark/environments/: chgnet.py  mace.py
rootstock-ipc-benchmark/rootstock/: __init__.py  calculator.py  cli.py  environment.py  pep723.py  protocol.py  server.py  worker.py
