[project]
name = "rootstock"
version = "0.4.0"
description = "MLIP calculators with isolated Python environments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.22",
    "numpy>=1.24",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
modal = [
    "modal>=0.56",
]
# MACE dependencies - these would typically be in the isolated env
mace = [
    "mace-torch>=0.3",
    "torch>=2.0",
]

[project.scripts]
rootstock = "rootstock.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rootstock"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
