[project]
name = "rootstock-ipc-benchmark"
version = "0.1.0"
description = "Benchmark IPC overhead for Rootstock MLIP calculator isolation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ase>=3.22",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]
modal = [
    "modal>=0.56",
]
# MACE dependencies - these would typically be in the isolated env
mace = [
    "mace-torch>=0.3",
    "torch>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
